frontend/stylesheets/trace_view/_tracing_view.less
@import "../_variables.less";

#tracing {
  position: relative;
  display: inline-block;
  vertical-align: top;

  margin: 0 20px;
}

#flightmode-switch {
  position: absolute;
  top: 12px;
  left: 12px;
}

#inputcatchers {
  position: absolute;
  width: 100%;
}

.inputcatcher-border {
  border-style: solid;
  border-width: 2px;
  opacity: 0.85;
  width: 100%;
  height: 100%;

  &:hover {
    opacity: 1;
  }

  &.PLANE_XY {
    border-color: var(--color-xy-viewport);
  }

  &.PLANE_YZ {
    border-color: var(--color-yz-viewport);
  }

  &.PLANE_XZ {
    border-color: var(--color-xz-viewport);
  }

  &.TDView {
    border-color: white;
  }
}

.inputcatcher {
  z-index: 20;
  float: left;
  margin: 0;
  width: 100%;
  height: 100%;
}

#inputcatcher_TDView {
  position: relative;
}

#TDViewControls {
  display: flex;
  justify-content: end;

  .ant-btn {
    line-height: 23px;
    vertical-align: baseline;
    padding-left: 10px;
    padding-right: 10px;

    & > .colored-dot {
      display: inline-block;
      width: 10px;
      height: 10px;
      border-radius: 50%;
    }

    &:nth-child(2) .colored-dot {
      background-color: var(--color-xy-viewport);
    }

    &:nth-child(3) .colored-dot {
      background-color: var(--color-yz-viewport);
    }

    &:nth-child(4) .colored-dot {
      background-color: var(--color-xz-viewport);
    }
  }
}

.cell-id-table {
  td,
  th {
    padding: 5px;
    text-align: right;
  }
}

.tracing-layout {
  height: calc(100vh - var(--navbar-height));
  display: flex;

  &.ant-layout,
  & .ant-layout {
    overflow: initial;
  }

  .ant-layout-content {
    overflow: initial;
  }

  .ant-layout-sider {
    overflow-x: hidden;
    overflow-y: auto;
  }

  .ant-layout-has-sider {
    overflow-y: auto;
    overflow-x: auto;
    flex: 1 1 auto;
  }
}

.tracing-settings-menu {
  width: @left-menu-width;
  font-size: 14px;
  font-variant: tabular-nums;
  line-height: 1.5715;
  list-style: none;
  font-feature-settings: "tnum";
  padding: 16px;
  padding-top: 10px;

  .ant-collapse-content {
    color: unset;
  }
}

.setting-label {
  word-wrap: break-word;
  white-space: normal;
  margin-right: 5px;
  display: inline-block;
}

.node-context-menu {
  z-index: 1000;
  border-radius: 6px;
  color: var(--ant-color-text);
  background: var(--ant-color-bg-container);
  box-shadow: var(--ant-box-shadow);

  .node-context-menu-item {
    clear: both;
    margin: 0;
    padding: 5px 12px;
    font-weight: normal;
    font-size: 14px;
    line-height: 22px;
    white-space: nowrap;
  }

  .keyboard-key-icon-small {
    line-height: 30px;
  }

  // Antd is asked to render the dropdown menu
  // into .node-context-menu. However, antd expects
  // that div to be positioned at 0,0 and tries to
  // position the menu within the div accordingly.
  // However, we are already positioning the div
  // at the desired spot. Therefore, the dropdown itself
  // should be positioned statically.
  .ant-dropdown {
    position: static !important;
  }

  > div {
    // Fixes too wide context menu
    width: unset !important;
    // Ensures that the context menu is correctly trapped
    // within its sticky container.
    position: unset !important;
  }

  .dropdown-overlay-container-for-context-menu {
    min-width: unset !important;
  }
}

.cursor-tooltip {
  position: absolute;
  width: fit-content;
  pointer-events: all;
  border-radius: 6px 0px 6px 6px;
  padding: 2px 4px;
  font-size: 14px;
  overflow: hidden;

  /* Arrow pointing UP and RIGHT */
  &:after {
    content: "";
    position: absolute;
    top: -6px;
    /* Position above tooltip */
    right: -6px;
    /* On the far right */
    height: 12px;
    width: 12px;
    transform: rotate(45deg);
    background-color: var(--ant-color-text);
  }
}

#version-restore-sider {
  box-shadow: var(--ant-box-shadow);
  border-left: 1px solid var(--ant-color-border);
  padding-top: 15px;
  position: fixed;
  right: 0;
  z-index: 1000;
  top: var(--navbar-height);
  bottom: 0;

  .version-section {
    font-weight: bold;
  }

  .version-entry-header {
    .ant-avatar {
      color: var(--ant-color-text);
      background-color: transparent;
    }
  }

  .version-entry {
    padding: 3px;

    &:hover:not(.active-version-entry) {
      background-color: var(--ant-blue-1);
    }
  }

  .version-entry-indented {
    padding-left: 40px;
  }

  .active-version-entry {
    background-color: var(--ant-blue-2);
  }

  .close-button > i {
    margin-right: 0px;
  }
}

.keyboard-key-icon-small {
  border: 1px solid rgb(255, 255, 255);
  border-radius: 2px;
  min-width: 14px;
  height: 14px;
  text-align: center;
  font-size: 10px;
  font-weight: bold;
  vertical-align: middle;
  display: inline-block;
  padding: 0px 2px 0px 2px;
}

.keyboard-mouse-icon svg {
  width: 2em;
  height: 2em;
}

span.keyboard-key-icon:first-child,
img.keyboard-mouse-icon:first-child {
  margin-left: 0px;
}

.shortcut-table-info-tab {
  margin-top: 25px;
  max-width: 500px;
  font-size: 14px;
}

#portal-navbarTracingSlot {
  width: 100%;
  line-height: normal;
}

.navbar-header {
  padding: 0;
  overflow-x: auto;
  overflow-y: hidden;
  position: fixed;
  top: 0;
  height: var(--navbar-height);
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.navbar-header,
.statusbar-footer {
  // Dark mode for UI within navbar and footer
  @dark-bg: #383d48;
  @dark-fg: #f1f1f1;
  @dark-border: #585868;

  color: rgba(255, 255, 255, 0.67);
  z-index: 1000;

  &.statusbar-footer {
    left: 0px;
    bottom: 0px;
    right: 0px;
    position: absolute;
    height: var(--footer-height);
    overflow: hidden;
    font-size: 11px;
    text-align: center;
    padding: 0px;
  }

  &.navbar-header {
    width: 100%;
  }

  .navbar-separator {
    height: 100%;
    margin-left: 2px;
    border-left: 1px #666879 solid;
  }

  .ant-select-arrow,
  .ant-badge-dot {
    // Fix
    //   - arrow in select-box
    //   - dot on create-cell button
    // which disappears on hover otherwise
    z-index: 1;
  }

  .ant-btn,
  .ant-input,
  .ant-input-number,
  .ant-radio-button-wrapper,
  .ant-select > .ant-select-selector {
    color: @dark-fg !important;

    &.upgrade-banner-button {
      background-color: var(--ant-button-primary-color) !important;
      color: var(--ant-color-primary) !important;
      border-color: var(--ant-button-primary-color);
      display: flex;
      align-items: center;
    }

    &:hover {
      z-index: 1 !important;
    }
  }

  .ant-btn[disabled],
  .ant-btn[disabled]:hover {
    color: mix(gray, @dark-fg, 70%) !important;
  }

  .ant-select-arrow {
    color: @dark-fg;
  }

  .ant-btn-danger {
    background: var(--ant-color-error-bg);

    &:hover {
      background: var(--ant-color-error-bg);
      color: white;
    }
  }

  // left/right-border-button is the antd <Button> that is used for the FlexLayout to toggle the left/right-hand side panels
  .left-border-button.footer-button,
  .right-border-button.footer-button {
    position: absolute;
    top: 0px;
    bottom: 0px;
    height: auto;
    color: @dark-fg;
    background-color: inherit;
  }

  .left-border-button.footer-button {
    left: 8px;
  }

  .right-border-button.footer-button {
    right: 8px;
  }

  .upgrade-banner {
    .upgrade-banner-wk-link {
      margin-inline: -2;
      color: var(--ant-color-text-primary);
      font-weight: bold;

      &:hover {
        color: var(--color-blue-zircon);
      }
    }

    .ant-alert-close-icon {
      .anticon,
      .anticon-close {
        color: var(--ant-color-text-primary);
      }
    }
  }
}

.left-border-button,
.right-border-button {
  border: none;
  margin: 0px 5px 0px 0px;
  padding: 0;
  // If the z-index is wrong, tapping the collapse/expand buttons
  // on mobile does not work or the icon bleeds some white background
  // into the top navbar.
  z-index: 999;
  color: var(--ant-color-text-secondary);
}

.flex-layout-container {
  left: 0px;
  top: 0px;
  right: 0px;
  height: calc(100% - var(--footer-height));
  position: absolute;
  overflow: hidden;
}

.no-hover-highlighting {
  &:hover,
  &:focus,
  &:active {
    border: none !important;
    background-color: initial;
    color: initial;
  }
}

.center-item-using-flex {
  display: flex !important;
  align-items: center;
  justify-content: center;
}

.hide-if-first:first-child {
  display: none;
}

.hide-if-last:last-child {
  display: none;
}

.node-context-menu-overlay {
  width: 100%;
  /* The navbar and footer have a higher z-value than the context menu and
     should not be covered by the context menu overlay. At the same time
     the overlay serves as the container for the css-sticky context menu. */
  height: calc(100% - var(--navbar-height) - var(--footer-height));
  position: absolute;
  /* The context menu needs a higher z-value than flexlayout__tab_button_content.
     Otherwise the tab title covers the context menu. */
  z-index: 110;
}

.segment-list-context-menu-overlay,
.bbox-list-context-menu-overlay {
  // The parent has a padding of 10px on all sides which we need to subtract here.
  width: calc(100% - 20px) !important;
  height: calc(100% - 20px) !important;
}

.tree-list-context-menu-overlay {
  width: calc(100% - 20px) !important;
  height: calc(100% - var(--navbar-height) - var(--footer-height) - 30px) !important;
}

#main-tooltip {
  max-width: 250px;
  font-size: 14px;
}

// css for keyboard shortcut modal
.keyboard-shortcut-table-modal {
  margin-bottom: 24px;
  width: 100%;

  td:nth-child(2) {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
    align-items: center;
    width: 100%;

    .keyboard-shortcuts-container {
      display: flex;
      flex-wrap: wrap;
      gap: 8px;
      align-items: center;
      flex: 1;
      min-width: 0px;

      .single-keyboard-shortcut-container {
        display: inline-flex;
        gap: 4px;
        align-items: center;
        padding: 2px;
        white-space: nowrap;
        border: 1px solid var(--ant-color-border);
        border-radius: 4px;

        span {
          display: flex;
          align-items: center;
          gap: 4px; /* Adjust spacing as needed */
        }

        .mouse-icon-large {
          svg {
            height: 23px;
            width: auto;
          }
          height: 23px;
          width: auto;
        }
        .mouse-icon-tooltip-wrapper {
          display: inline-flex;
          justify-content: center;
          align-items: center;
          height: 32px;
        }
      }
    }

    .add-button-container {
      order: 1;
      display: flex;
      justify-content: flex-end;
      margin-left: auto;
      min-width: 0;
    }
  }
}

.read-only-button.ant-btn-dangerous:disabled {
  background-color: var(--ant-color-warning) !important;
  color: #f5eddf !important;
}

